# prefix

./: Cargo.toml  README.md  prefix.yml  rustfmt.toml
.github/workflows/: main.yml
src/: git.rs  init.rs  install.rs  main.rs  run.rs  uninstall.rs
tests/data/: config.yml
