[package]
name = "prefix"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "git hook manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
futures-preview = { version = "0.3.0-alpha.19", features = [ "compat"] }
glob = "0.3"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.0-alpha.6", features = ["process"] }
structopt = "0.3"
path-slash = "0.1"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }