[package]
name = "prefix"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "git hook manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9"
futures =  { version = "0.3" }
glob = "0.3"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
path-slash = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
tokio = { version = "0.2", features = ["rt-core","macros","process"] }